--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "6.4.1",
+    "@react-navigation/elements": "1.3.3",
+    "@react-navigation/material-top-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~47.0.12",
+    "expo-app-loading": "~2.1.1",
+    "expo-av": "~13.0.2",
+    "expo-font": "~11.0.1",
+    "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-pager-view": "6.0.1",
+    "react-native-radial-gradient": "^1.1.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-tab-view": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
